--- a/Desktop/AiRehab/templates/index.html
+++ b/Desktop/AiRehab/templates/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>AiRehab EMR</title>
-</head>
-<body>
-    <h1>Welcome to AiRehab EMR</h1>
-    <p>Start building your WebPT mimic here.</p>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<h2>All Patients</h2>
+<a href="{{ url_for('add_patient') }}">Add Patient</a>
+<ul>
+    {% for p in patients %}
+        <li>
+            <a href="{{ url_for('patient_detail', patient_id=p.id) }}">
+                {{ p.last_name }}, {{ p.first_name }}
+            </a>
+        </li>
+    {% endfor %}
+</ul>
+{% endblock %}
