--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
         </h2>
         <a href="{{ url_for('index') }}">🏠 Home</a>
         <a href="{{ url_for('calendar_view') }}">📅 Calendar</a>
-        <a href="{{ url_for('patients') }}">🧑‍🤝‍🧑 Patients</a>
+        <a href="{{ url_for('patients_form') }}">🧑‍🤝‍🧑 Patients</a>
     </nav>
     <main>
         <header>
