--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,8 @@
         </h2>
         <a href="{{ url_for('index') }}">🏠 Home</a>
         <a href="{{ url_for('calendar_view') }}">📅 Calendar</a>
-        <a href="{{ url_for('patients_form') }}">🧑‍🤝‍🧑 Patients</a>
+        <a href="{{ url_for('patient_list') }}">🧑‍🤝‍🧑 Patients</a>=
+        <a href="{{ url_for('pt_builder.html') }}">📝 Patients</a>=
     </nav>
     <main>
         <header>
