Initial commit for AiRehab, proper scope

--- a/templates/base.html
+++ b/templates/base.html
@@ -124,7 +124,7 @@
     <div class="topnav">
         <span class="brand">Clinic Scheduler</span>
         <a href="{{ url_for('index') }}">Dashboard</a>
-        <a href="{{ url_for('calendar') }}">Calendar</a>
+        <a href="{{ url_for('calendar_view') }}">Calendar</a>
         <a href="{{ url_for('patient_list') }}">My Patients</a>
         <a href="{{ url_for('add_therapist') }}">Therapists</a>
         <a href="#">Physicians</a>
@@ -138,7 +138,7 @@
     <div class="main-area">
         <nav class="sidebar">
             <a href="{{ url_for('index') }}">🏠 Dashboard</a>
-            <a href="{{ url_for('calendar') }}">🏠 Calendar</a>
+            <a href="{{ url_for('calendar_view') }}">🏠 Calendar</a>
             <a href="{{ url_for('patient_list') }}">🧑‍🤝‍🧑 My Patients</a>
             <a href="{{ url_for('add_therapist') }}">🏅 Therapists</a>
             <a href="#">🏅 Physicians</a>
